Changes for mobile

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
           <select class="selectnav">
             <option value="#" selected="">Home</option>
             <option value="#">About</option>
-            <option value="#">→ Another action</option>
-            <option value="#">→ Something else here</option>
-            <option value="#">→ Another action</option>
-            <option value="#">→ Something else here</option>
+            <option value="#">Men</option>
+            <option value="#">Women</option>
+            <option value="#">Kinky</option>
+            <option value="#">Kids</option>
             <option value="#">Services</option>
-            <option value="#">Portfolio</option>
+            <option value="#">Login</option>
             <option value="#">Contact</option>
           </select>
           </label>
