--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
             <option value="#">Women</option>
             <option value="#">Kinky</option>
             <option value="#">Kids</option>
-            <option value="#">Services</option>
-            <option value="#">Login</option>
+            <option value="login.html">Login</option>
             <option value="#">Contact</option>
           </select>
           </label>
