--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
 			   <div class="col-md-6 login-right">
 			  	<h3>REGISTERED CUSTOMERS</h3>
 				<p>If you have an account with us, please log in.</p>
-				<form action="LoginServlet" method="post">
+				<form action="loginServlet" method="post">
 				  <div>
 					<span>Email Address<label>*</label></span>
 					<input type="text" name="name"> 
