--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
 	  <script src="js/modernizr.custom.js"></script>
+	  
+<script>FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+});</script>
  
   </head>
 
