redirect to home

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
     statusChangeCallback(response);
 	if (response.status === 'connected') {
 	console.log(response.authResponse.userID);
-  window.top.location = "index.html";
+  window.top.location = "https://csinye.github.io/";
   }
 });</script>
  
@@ -67,7 +67,7 @@ function checkLoginState() {
    statusChangeCallback(response);
   if (response.status === 'connected') {
   console.log(response.authResponse.userID);
-  window.top.location = "index.html";
+  window.top.location = "https://csinye.github.io/";
   }
   });
 }
