--- a/login.html
+++ b/login.html
@@ -23,19 +23,13 @@
     <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
 	  <script src="js/modernizr.custom.js"></script>
-	  <script>FB.getLoginStatus(function(response) {
-    statusChangeCallback(response);
-	if (response.status === 'connected') {
-	console.log(response.authResponse.userID);
-  window.top.location = "https://csinye.github.io/";
-  }
-});</script>
  
   </head>
 
   <body>
   <div id="fb-root"></div>
-<script>(function(d, s, id) {
+<script>
+(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
@@ -84,7 +78,8 @@ function checkLoginState() {
 <div class="login-page">
 			   <div class="account_grid">
 			   <div class="col-md-6 login-left">
-			   <div class="fb-login-button" data-width="250" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true"></div>
+			   <div class="fb-login-button" data-width="250" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true">
+			   </div>
 			  	
 				 <h3>NEW CUSTOMERS</h3>
 				 <p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>
