--- a/login.html
+++ b/login.html
@@ -59,6 +59,7 @@
 function checkLoginState() {
   FB.getLoginStatus(function(response) {
    statusChangeCallback(response);
+   alert(response.status);
   if (response.status === 'connected') {
   console.log(response.authResponse.userID);
   window.top.location = "https://csinye.github.io/";
