--- a/login.html
+++ b/login.html
@@ -55,7 +55,10 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
    
-
+if (response.status === 'connected') {
+  console.log(response.authResponse.userID);
+  window.top.location = "https://csinye.github.io/";
+  }
 function checkLoginState() {
   FB.getLoginStatus(function(response) {
    statusChangeCallback(response);
@@ -65,13 +68,7 @@ function checkLoginState() {
   }
   });
 }();
-FB.login(function(response) {
-alert("fb.login");
-     if (response.authResponse) {
-        window.top.location = "http://www.foo.com";
-        });
 
-        }
 </script>
   
      <div class="container page-styling">
