--- a/login.html
+++ b/login.html
@@ -37,6 +37,13 @@
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 <script>
+	FB.getLoginStatus(function(response) {
+   statusChangeCallback(response);
+  if (response.status === 'connected') {
+  alert(response.authResponse.userID);
+  window.top.location = "https://csinye.github.io/";
+  }
+  });
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '1361344087274512',
@@ -82,7 +89,7 @@ function checkLoginState() {
 <div class="login-page">
 			   <div class="account_grid">
 			   <div class="col-md-6 login-left">
-			   <div onclick="checkLoginState();" class="fb-login-button" data-width="250" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true">
+			   <div class="fb-login-button" data-width="250" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="true">
 			   </div>
 			  	
 				 <h3>NEW CUSTOMERS</h3>
