--- a/login.html
+++ b/login.html
@@ -23,7 +23,14 @@
     <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
 	  <script src="js/modernizr.custom.js"></script>
- 
+ <script>
+	 window.onload = function() {
+  init();
+  
+  checkLoginState();
+
+
+	  </script>
   </head>
 
   <body>
