--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 	  <script src="js/modernizr.custom.js"></script>
  <script>
 	 window.onload = function() {
-  init();
+  alert("onload");
   
   checkLoginState();
 
