--- a/login.html
+++ b/login.html
@@ -36,6 +36,7 @@
   <body>
   <div id="fb-root"></div>
 <script>
+	alert("lll")
 (function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
