--- a/login.html
+++ b/login.html
@@ -103,11 +103,11 @@ if (response.status === 'connected') {
 				<form action="LoginServlet" method="post">
 				  <div>
 					<span>Email Address<label>*</label></span>
-					<input type="text" name="uname"> 
+					<input type="text" name="name"> 
 				  </div>
 				  <div>
 					<span>Password<label>*</label></span>
-					<input type="password" name="pass"> 
+					<input type="password" name="password"> 
 				  </div>
 				  <a class="forgot" href="#">Forgot Your Password?</a>
 				  <input type="submit" value="LoginServlet">
